--- a/Flair_Detector_Model/templates/automated_testing.html
+++ b/Flair_Detector_Model/templates/automated_testing.html
@@ -96,9 +96,9 @@ li a.active {
 <body>
 
 <ul>
-  <li><a  href="/linking_home">Home</a></li>
+  <li><a  href="/">Home</a></li>
   
-  <li><a class="active" href="/linking">Automated Testing</a></li>
+  <li><a class="active" href="/automated_testing">Automated Testing</a></li>
   
 </ul>
 <div class="border-bottom shelf intro-shelf js-notice mb-0 pb-4">
