--- a/Flair_Detector_Model/templates/home.html
+++ b/Flair_Detector_Model/templates/home.html
@@ -96,10 +96,10 @@ li a.active {
 <body>
 <nav>
  <ul>
-  <li><a class="active" href="linking_home">Home</a></li>
+  <li><a class="active" href="/">Home</a></li>
    
   
-  <li><a href="/linking">Automated Testing</a></li>
+  <li><a href="/automated_testing">Automated Testing</a></li>
   
  </ul>
 </nav>
@@ -116,7 +116,7 @@ li a.active {
   </div>	
 <div class="ml-container">
   
-    <form action={{ url_for('predict') }} method="POST">
+    <form href="/" method="POST">
     <center><p>Enter the URL here</p><center>
     <textarea name="url" input type="text" rows="1" cols="100"></textarea>
     <br/>
